# jules_verne_player

./: .eslintrc.cjs  package.json  pnpm-lock.yaml
src/: App.svelte  global.css  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Controls.svelte  LottiePlayer.svelte
