[package]
name = "jules_verne_player"
version = "0.1.0"
description = "Jules Verne Lottie composition player"
authors = ["dev@akylasfr"]
license = "MIT"
repository = "https://github.com/farfromrefug/jules_verne_player"
default-run = "jules_verne_player"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "543e6bd", features = ["dialog-all", "dialog-open", "dialog-save", "fs-all", "fs-read-text-file", "os-all", "path-all", "shell-open"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
